[gd_scene load_steps=5 format=3 uid="uid://blkqsgswlireh"]

[ext_resource type="Script" path="res://Scenes/TutorialMenu/tutorialScreen2.gd" id="1_cmqvr"]
[ext_resource type="PackedScene" uid="uid://34403u2svqws" path="res://Scenes/TutorialButton/tutorialButton.tscn" id="2_rqpej"]
[ext_resource type="Texture2D" uid="uid://corvs4jhdgfk3" path="res://RelunaIcons/backArrow.png" id="3_1xtx2"]
[ext_resource type="Texture2D" uid="uid://dqg26wq4ious3" path="res://RelunaIcons/backArrowFocused.png" id="4_nmgah"]

[node name="tutorialScreen2" type="Node2D"]
script = ExtResource("1_cmqvr")

[node name="Level13" parent="." instance=ExtResource("2_rqpej")]
offset_left = 2.0
offset_top = 221.0
offset_right = 296.0
offset_bottom = 557.0
focus_neighbor_left = NodePath("../ReturnButton")
focus_neighbor_top = NodePath("../ReturnButton")
focus_neighbor_right = NodePath("../Level14")
focus_neighbor_bottom = NodePath("../Level19")
text = "13"
tutorialNum = "13"

[node name="Level14" parent="." instance=ExtResource("2_rqpej")]
offset_left = 259.0
offset_top = 223.0
offset_right = 553.0
offset_bottom = 559.0
focus_neighbor_left = NodePath("../Level13")
focus_neighbor_right = NodePath("../Level15")
focus_neighbor_bottom = NodePath("../Level20")
text = "14"
tutorialNum = "14"

[node name="Level15" parent="." instance=ExtResource("2_rqpej")]
offset_left = 521.0
offset_top = 220.0
offset_right = 815.0
offset_bottom = 556.0
focus_neighbor_left = NodePath("../Level14")
focus_neighbor_right = NodePath("../Level16")
focus_neighbor_bottom = NodePath("../Level21")
text = "15"
tutorialNum = "15"

[node name="Level16" parent="." instance=ExtResource("2_rqpej")]
offset_left = 788.0
offset_top = 223.0
offset_right = 1082.0
offset_bottom = 559.0
focus_neighbor_left = NodePath("../Level15")
focus_neighbor_right = NodePath("../Level17")
focus_neighbor_bottom = NodePath("../Level22")
text = "16"
tutorialNum = "16"

[node name="Level17" parent="." instance=ExtResource("2_rqpej")]
offset_left = 1045.0
offset_top = 224.0
offset_right = 1339.0
offset_bottom = 560.0
focus_neighbor_left = NodePath("../Level16")
focus_neighbor_right = NodePath("../Level18")
focus_neighbor_bottom = NodePath("../Level23")
text = "17"
tutorialNum = "17"

[node name="Level18" parent="." instance=ExtResource("2_rqpej")]
offset_left = 1292.0
offset_top = 225.0
offset_right = 1586.0
offset_bottom = 561.0
focus_neighbor_left = NodePath("../Level17")
focus_neighbor_bottom = NodePath("../Level24")
text = "18"
tutorialNum = "18"

[node name="Level19" parent="." instance=ExtResource("2_rqpej")]
offset_left = 4.0
offset_top = 495.0
offset_right = 298.0
offset_bottom = 831.0
focus_neighbor_top = NodePath("../Level13")
focus_neighbor_right = NodePath("../Level20")
text = "19"
tutorialNum = "19"

[node name="Level20" parent="." instance=ExtResource("2_rqpej")]
offset_left = 263.0
offset_top = 497.0
offset_right = 557.0
offset_bottom = 833.0
focus_neighbor_left = NodePath("../Level19")
focus_neighbor_top = NodePath("../Level14")
focus_neighbor_right = NodePath("../Level21")
text = "20"
tutorialNum = "20"

[node name="Level21" parent="." instance=ExtResource("2_rqpej")]
offset_left = 523.0
offset_top = 494.0
offset_right = 817.0
offset_bottom = 830.0
focus_neighbor_left = NodePath("../Level20")
focus_neighbor_top = NodePath("../Level15")
focus_neighbor_right = NodePath("../Level22")
text = "21"
tutorialNum = "21"

[node name="Level22" parent="." instance=ExtResource("2_rqpej")]
offset_left = 792.0
offset_top = 497.0
offset_right = 1086.0
offset_bottom = 833.0
focus_neighbor_left = NodePath("../Level21")
focus_neighbor_top = NodePath("../Level16")
focus_neighbor_right = NodePath("../Level23")
text = "22"
tutorialNum = "22"

[node name="Level23" parent="." instance=ExtResource("2_rqpej")]
offset_left = 1047.0
offset_top = 498.0
offset_right = 1341.0
offset_bottom = 834.0
focus_neighbor_left = NodePath("../Level22")
focus_neighbor_top = NodePath("../Level17")
focus_neighbor_right = NodePath("../Level24")
text = "23"
tutorialNum = "23"

[node name="Level24" parent="." instance=ExtResource("2_rqpej")]
offset_left = 1294.0
offset_top = 499.0
offset_right = 1588.0
offset_bottom = 835.0
focus_neighbor_left = NodePath("../Level23")
focus_neighbor_top = NodePath("../Level18")
text = "24"
tutorialNum = "24"

[node name="ReturnButton" type="TextureButton" parent="."]
offset_left = 24.0
offset_top = 38.0
offset_right = 264.0
offset_bottom = 278.0
scale = Vector2(0.75, 0.75)
focus_neighbor_right = NodePath("../Level13")
focus_neighbor_bottom = NodePath("../Level13")
texture_normal = ExtResource("3_1xtx2")
texture_hover = ExtResource("4_nmgah")
texture_focused = ExtResource("4_nmgah")

[node name="Label" type="Label" parent="."]
offset_left = 258.0
offset_top = 53.0
offset_right = 1353.0
offset_bottom = 203.0
text = "Tutorial Levels"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="ReturnButton" to="." method="_on_return_button_pressed"]
